feat: eslint lint-staged test

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview",
     "prepare": "husky install"
   },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+  "hooks": {
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
