--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview",
     "prepare": "husky install"
   },
-  "hooks": {
-    "pre-commit": "lint-staged"
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
