feat: eslint lint-staged test

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint"
+    "*.{ts,tsx}": ["eslint", "prettier --write"]
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
