--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.ts": ["prettier --write", "eslint"],
+  "*.ts": ["prettier --write", "eslint", "yarn test"],
   "*.tsx": ["eslint", "prettier --write"]
 }
