--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "~/shared/ui/kit",
+    "components": "~/shared",
     "utils": "~/shared/lib"
   }
 }
