--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.0.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -57,7 +59,8 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "postcss": "^8.4.33",
-    "prettier": "3.2.4",
+    "prettier": "^3.2.4",
+    "react-router-dom": "^6.21.3",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
