--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
+  "types": ["@testing-library/jest-dom"],
   "include": ["src", "tailwind.config.js", "commitlint.config.cjs",
-    "jest.config.ts"
+    "jest.config.ts", "global.d.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
